# markdown2web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  patch.diff  test_grid.html  test_grid2.html  test_grid3.html  test_grid_abs.html
.omx/: metrics.json  notepad.md
.omx/context/: markdown2web-admin-buildlog-glow-fix-20260408T082400Z.md  markdown2web-autopilot-20260408T063430Z.md  markdown2web-card-glow-fix-20260408T080000Z.md  markdown2web-cursor-beacon-20260408T090200Z.md  markdown2web-cursor-beacon-overlay-fix-20260408T092800Z.md  markdown2web-glow-unify-radius-20260408T083400Z.md  markdown2web-interaction-math-highlight-20260408T073100Z.md  markdown2web-note-sidebar-spacing-hover-20260408T084400Z.md  markdown2web-pointer-glow-coverage-20260408T081200Z.md  markdown2web-visual-polish-20260408T071200Z.md
.omx/logs/: notify-hook-2026-04-08.jsonl  omx-2026-04-08.jsonl  session-history.jsonl  tmux-hook-2026-04-08.jsonl  turns-2026-04-08.jsonl
.omx/plans/: autopilot-impl.md  autopilot-spec.md  prd-markdown2web-2026-04-08.md  test-spec-markdown2web-2026-04-08.md
.omx/state/: hud-state.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-hook-state.json  ralph-state.json  skill-active-state.json  update-check.json  (+1 more)
deploy/: Caddyfile.snippet  markdown2web.service  nginx.conf  remote-upgrade.sh  server-deploy-a-caddy.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  time.rs
templates/: account.html  base.html  category.html  home.html  note.html  notes.html  search.html  tag.html
tests/: app_flow.rs
(+63 files in other folders)
