[package]
name = "markdown2web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.14"
dotenvy = "0.15"
axum = { version = "0.8", features = ["form", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
comrak = { version = "0.29", features = ["syntect"] }
hex = "0.4"
mime_guess = "2"
notify = "7"
rand = "0.8"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
